# SyMBac

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .swp  CHANGELOG.md  CITATION.cff  Makefile  PSF  README.md  Untitled.ipynb  colony_sim_example.py  dev_setup.sh  extract_DeLTA_validation_masks.asv  extract_DeLTA_validation_masks.m  import_and_scene_test.py  install.sh  mkdocs.yml  mypy.ini  pipreqs.txt  pixi.toml  pyproject.toml  requirements-dev.txt  requirements.txt  scientific_data smallcells.ipynb  setup.py  temp.py  untitled2.mlx
.github/workflows/: codeql.yml  tests.yml
OPL_renders/: MASK_000.tif  MASK_001.tif  MASK_002.tif  MASK_004.tif  MASK_006.tif  MASK_008.tif  MASK_010.tif  MASK_011.tif  MASK_013.tif  MASK_014.tif  MASK_016.tif  MASK_017.tif  MASK_018.tif  MASK_019.tif  MASK_020.tif  MASK_021.tif  MASK_022.tif  MASK_023.tif  MASK_024.tif  MASK_025.tif  MASK_026.tif  MASK_027.tif  MASK_028.tif  MASK_029.tif  MASK_030.tif  MASK_031.tif  MASK_032.tif  MASK_033.tif  MASK_034.tif  MASK_035.tif  MASK_036.tif  MASK_037.tif  MASK_038.tif  MASK_039.tif  MASK_040.tif  MASK_041.tif  MASK_042.tif  MASK_043.tif  MASK_044.tif  MASK_045.tif  (+1258 more)
SYMPTOMM/: OPL_generation  OPL_generation.py  PSF.PY  PSF.py  Untitled.ipynb  cell.py  cell_colony  cell_geometry.py  function_testing.ipynb  general_drawing.py  interactive_kernel.py  misc.py  phase_contrast_drawing.py  plotting.py  scene_functions.py  scene_functions_colony.py  trench_geometry.py
SYMPTOMM/image_manipulation/: pySHINE.py
SyMBac/: MM_lineage_example.ipynb  OPL_generation.py  PSF.py  __init__.py  _deprecation.py  auto_optimise.py  cell.bak.py  cell.py  cell_colony.py  cell_geometry.py  cell_simulation.py  cell_snapshot.py  colony_renderer.py  colony_simulation.py  config_models.py  drawing.py  general_drawing.py  lineage.py  live_viewer.py  metrics.py  misc.py  optimisation.py  parallel_simulation.py  phase_contrast_drawing.py  pySHINE.py  renderer.py  scene_functions.py  scene_functions_colony.py  simulation.py  texture_test.ipynb  trench_geometry.py
SyMBac/deep_learning/: loss.py  tensorflow_augmentations.py
SyMBac/napari/: __init__.py  app.py  plugin.py  state.py
SyMBac/physics/: __init__.py  colony.py  config.py  division_manager.py  growth_manager.py  joints.py  microfluidic_geometry.py  physics_representation.py  segments.py  simcell.py  simulator.py
SyMBac/sample_images/: sample_100x_stationary.tiff  sample_DeLTA.tiff
SyMBac_streamlit/: SyMBac_streamlit.py
SyMBac_streamlit/pages/: 1_global_parameters.py  2_simulation.py  3_PSF.py  4_annotate_real_image.py
code_testing_area/: simtester.ipynb  simulation_napari.ipynb  test_phase_contrast_drawing.py
docs/: brightfield-design.md  simulation.md
docs/physics_simulation/: colony.md  sim_config.md  simcell.md  simulation.md  simulator.md
docs/source/: Drawing_Phase_Contrast_100x_oil.rst  SyMBac.external.DeLTA.rst  SyMBac.external.rst  SyMBac.rst  SyMBac.sample_images.rst  brownian_jitter_model.rst  cell_growth_simulation.rst  conf.py  faqs.rst  index.rst  installation.rst  intro.rst  migration_v1_api_cleanup.rst  modules.rst  requirements.txt  scene_generation.rst  (+9 more)
examples/: Drawing_Bacillus.ipynb  Drawing_DeLTA.ipynb  Drawing_Narrow_Trench.ipynb  Drawing_Phase_Contrast_100x_oil.ipynb  Drawing_Phase_Contrast_100x_oil_stationary.ipynb  Drawing_Phase_Contrast_Ph2_data.ipynb  Drawing_self_test_predict_large_var.ipynb  Drawing_self_test_training_0_var.ipynb  Drawing_self_test_training_small_var.ipynb  Untitled1.ipynb  agar_pad.ipynb  bendy_worm.ipynb  cell_dynamics_test.py  draw_cell_test.py  morphologies_exponential.pickle
for_reviewers/: 3D_conv.ipynb  test.mhd  test.zraw
old/: CHANGELOG.md  dev_setup.sh  requirements.txt
output_pickles/: cell_timeseries.p  cell_timeseries.p.REMOVED.git-id  space.p
prototyping/: 6_93_mCherry.tiff  Drawing_Phase_Contrast.ipynb  Drawing_Phase_Contrast_100x_oil.ipynb  Drawing_Phase_Contrast_Ph2_data.ipynb  basic_simulation_tests.py  body_type_tests.py  cell_class_dynamics_test.py  convolution.ipynb  convolution_fluorescence.ipynb  drawing.ipynb  drawing_test.ipynb  ipython_cell_input.py  noise.ipynb  phase_contrast_PSF_prototyping.ipynb  pyglet_window_test.py  quickseg_test.ipynb  real_image_for_hist_match.tif  real_image_for_hist_match_stack.tif  real_image_for_hist_match_stack_2.tif  real_image_for_hist_match_stack_3.tif  shapes_test.py  testing_phase_contrast_trench_drawing.ipynb  trench_creation.py
pymunk_tests/: cell_class_dynamics_test.py  cell_class_test.py  cell_dynamics_test.py  draw_cell_test.py  drawing_test.ipynb  pyglet_window_test.py
sample_images/: sample_100x.tiff
setup/: check_tensorflow_gpu.py  install.sh
tests/: BIOMD0000000012_url.xml  CRN.ipynb  cell_timeseries.p  gillespie.ipynb  run_simulation.ipynb  run_simulation.py  simtester.ipynb  simulation_napari.ipynb  space_timeseries.p  test_api_compat.py  test_cell_snapshot_roundtrip.py  test_colony_optional_dependencies.py  test_colony_overlap.py  test_colony_rendering.py  test_config_models_roundtrip.py  test_division_manager_split.py  test_drawing.py  test_geff_export.py  test_growth_physics_invariants.py  test_image_helpers.py  test_lineage_compat.py  test_live_viewer.py  test_microfluidic_geometry.py  test_packaging_metadata.py  test_phase_contrast_drawing.py  test_physics_config_validation.py  test_psf_3d.py  test_renderer_mask_export.py  test_renderer_region_masks.py  test_simcell_core.py  test_simulation_persistence.py  test_substeps_validation.py  test_trench_geometry.py
(+216 files in other folders)
