[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "SyMBac"
version = "0.4.7"
description = "A package for generating synthetic images of bacteria in phase contrast or fluorescence. Used for creating training data for machine learning segmentation and tracking algorithms."
readme = "README.md"
license = "GPL-2.0-only"
authors = [
    { name = "Georgeos Hardo", email = "gh464@cam.ac.uk" },
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "tifffile>=2026.2.24",
    "scikit-image>=0.26.0",
    "matplotlib>=3.10.8",
    "tqdm>=4.67.3",
    "pandas>=3.0.1",
    "natsort>=8.4.0",
    "ipython>=9.10.0",
    "ipywidgets>=8.1.8",
    "joblib>=1.5.3",
    "scipy>=1.17.1",
    "napari[all]>=0.6.6",
    "pymunk>=7.2.0",
    "pyglet>=2.1.13",
    "matplotlib-scalebar>=0.9.0",
    "psfmodels>=0.3.3",
    "zarr>=3.1.5",
    "torch>=2.10.0",
]

[project.optional-dependencies]
cupy = ["cupy-cuda12x"]
docs = [
    "sphinx_automodapi",
    "sphinx-autobuild",
    "nbsphinx",
    "sphinx_copybutton",
    "sphinx_rtd_theme",
    "pandoc",
]

[project.urls]
Homepage = "https://github.com/georgeoshardo/SyMBac"

[tool.setuptools.packages.find]
include = ["SyMBac*"]

[tool.setuptools.package-data]
SyMBac = ["sample_images/*.tiff"]
